prevent accidental refresh on mobile

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+/*prevent accidental refresh on mobile*/
+html,
+body {
+  overscroll-behavior: none;
+}
+
 body {
   margin: 0;
   padding: 0;
